fix gamepage on small screens

--- a/frontend/src/content/BelotePage/BelotePage.module.scss
+++ b/frontend/src/content/BelotePage/BelotePage.module.scss
@@ -22,6 +22,16 @@
     grid-template-columns: 8fr 2fr; 
 }
 
+@media only screen and (max-width: 992px) {
+    .gameBoardAndIndicatorsContainer {
+        display: flex;
+    }
+    .gameBoardAndHandContainer {
+        margin: auto;
+    }
+
+}
+
 @media only screen and (min-width: 1500px) {
     .gameBoardAndIndicatorsContainer {
         margin: auto;
